package = { name='training', version='0.0.0', edition='2024', description = 'Training Products of Experts by Minimizing Contrastive Divergence'}

[dependencies]
num = { git='https://github.com/Matthias-Fauconneau/num' }
rand='0.9'
nalgebra='*'
statrs = { git = 'https://github.com/statrs-dev/statrs', features = ['rand','nalgebra'] }

image = { git='https://github.com/Matthias-Fauconneau/image', optional=true }
line = { git='https://github.com/Matthias-Fauconneau/line', optional=true }

[features]
plot=['dep:image','dep:line']
